--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -384,7 +384,7 @@
         <div class="single-service-icon">
             <i class="flaticon-car-1"></i>
         </div>
-        <h2><a href="{{ path('choisir_abonnement') }}">S'abonner</a></h2>
+        <h2><a href="{{ path('choisir_abonnement') }}">Souscrire un abonnement</a></h2>
         <p>
             Choisissez un abonnement pour bénéficier de nos services exclusifs.
         </p>
