--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -87,8 +87,9 @@
 				    <li><a href="{{ path('app_register') }}">Inscription</a></li>
 				{% endif %}
 
-
+                                <li><a href="{{ path('admin_login') }}">Admin</a></li>
                             </ul>
+
                         </div>
                     </div>
                 </nav>
