--- a/templates/offre/detail.html.twig
+++ b/templates/offre/detail.html.twig
@@ -221,7 +221,7 @@
     {#  Boutons #}
     <div class="btn-container">
 
-        <a class="btn btn-secondary">Réserver</a>
+        <a href="{{ path('reserver_voiture', { 'id': offre.id }) }}" class="btn btn-secondary">Réserver</a>
     </div>
 </div>
 </body>
